--- a/app/index.html
+++ b/app/index.html
@@ -126,8 +126,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <script>
   $("#registerButton").click(function(e){
     alert("ALERT!");
-      $('#login-element').hide();
-      $('#signup').removeClass('hidden').slideDown();
+      $('#login-element').slideUp();
+      $('#signup').slideDown();
   });
 
   </script>
