vor merge mit master

--- a/app/elements/login-element/login-element.html
+++ b/app/elements/login-element/login-element.html
@@ -83,7 +83,7 @@
         }},
         registerClick:function() {
      $('#login-element').hide();
-      $('#signup').removeClass('hidden')},
+      $('#signup').slideDown();},
 
         handleClick: function() {
 
